[package]
name = "world-host-server-rust"
version = "0.1.0"
edition = "2021"
description = "Server software for World Host"

[dependencies]
clap = { version = "4.5", features = ["derive", "wrap_help", "string"] }
parse_duration = "2.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tokio = { version = "1.41", features = ["full"] }
