[package]
name = "world-host-server-rust"
version = "0.1.0"
edition = "2021"
description = "Server software for World Host"

[dependencies]
# Utilities
chrono = "0.4"
try-catch = "0.2"

# Logging
log = "0.4"
log4rs = { version = "1.3", features = ["gzip", "background_rotation"] }

# Argument parsing
clap = { version = "4.5", features = ["derive", "wrap_help", "string"] }
parse_duration = "2.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Application
tokio = { version = "1.41", features = ["full"] }
