[package]
name = "world-host-server"
version = "0.5.0"
edition = "2021"
description = "Server software for World Host"

[dependencies]
# Utilities
chrono = "0.4"
try-catch = "0.2"
lazy_static = "1.5"
case_insensitive_hashmap = "1.0"
unicase = "2.8"
anyhow = "1.0"

# Logging
log = "0.4"
log4rs = { version = "1.3", features = ["gzip", "background_rotation"] }

# Argument parsing
clap = { version = "4.5", features = ["derive", "wrap_help", "string"] }
parse_duration = "2.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Http
reqwest = { version = "0.12", features = ["json", "stream"] }
csv-async = "1.3"
futures = "0.3"
async-compression = { version = "0.4", features = ["gzip", "tokio"] }
tokio-util = { version = "0.7", features = ["compat"] }
querystring = "1.1"

# Cryptography
rsa = "0.9"
rand = "0.8"
sha1 = "0.10"
aes = "0.7"
cfb8 = "0.7"
cipher = { version = "0.3", features = ["std"] }

# Funny handshake libraries
num-bigint = "0.4"
md-5 = "0.10"

# Application
tokio = { version = "1.43", features = ["full"] }
uuid = { version = "1.15", features = ["serde"] }
socket2 = "0.5"
byteorder = "1.5"
linked_hash_set = "0.1"
queues = "1.1"
